2021. 4.18. Added zVec3DTree2List and zVec3DList2Tree. [zeo_vec3d_list, zeo_vec3d_tree, zeo_vec3d_list_tree, zeo_vec3d]
2021. 4.18. Modified specification of zVec3DListNN. [zeo_vec3d_list]
2021. 4.18. Renamed zVecTree3D to zVec3DTree. [zeo_vec3d_tree]
2021. 4.17. Modified _zShape3DRotFromZTK. [zeo_shape]
2021. 4.16. Modified zPH3DFReadSTL_Bin to show the progress of reading to stderr. [zeo_ph_stl]
2021. 4.16. Modified _zSTLVertListReg to speed up find-and-insertion of a vertex. [zeo_ph_stl]
2021. 4.16. Added zMat3DIsIdent. [zeo_mat3d]
2021. 4.16. Added zFrame3DEqual and zFrame3DIsIdent. [zeo_frame]
2021. 4.16. Added zMat3DRotDRC. [zeo_mat3d]
2021. 4.10. Modified zShape3DFromZTK to accept local transformation. [zeo_shape]
2021. 4.10. Added _zShape3DPosFromZTK, _zShape3DAttFromZTK, _zShape3DRotFromZTK and _zShape3DFrameFromZTK. [zeo_shape]
2021. 4.10. Added zAAFromZTK. [zeo_mat3d]
2021. 4. 2. Modified zRGBFPrint and zHSVFPrint. [zeo_color]
2021. 3.31. Reflect modification of ZEDA and abolished *RegZTK. [zeo_optic, zeo_texture, zeo_ph, zeo_nurbs, zeo_mshape*, zeo_map, zeo_map_terra, zeo_mapnet]
2021. 3.31. Modified makefile to separately make and install library and applications. [makefile]
2021. 2.23. Reimplemented zXform3D, zXform3DInv, zFrame3DInv, zFrame3DCascade and zFrame3DXform. [zeo_frame]
2021. 2.23. Added _zXform3D, _zXform3DInv, _zFrame3DInv, _zFrame3DCascade and _zFrame3DXform as macro. [zeo_frame]
2021. 2.21. Added transformation function in zeo_phconv. [app]
2021. 2.20. Added zeo_stl2ztk. [app]
2021. 2.20. Added zSTLIsBin and reimplemented zPH3DFReadSTL. [zeo_ph_stl]
2021. 2.20. Abolished check of normal vector in _zSTLFacetListReg. [zeo_ph_stl]
2021. 2.20. Abolished ZEO_WARN_STL_WRONGNORMAL. [zeo_errmsg]
2020. 7. 2. Added zGJKPoint. [zeo_col_gjk]
2020. 6.20. Added id_bump member in zTexture in order to handle multiple bump maps. [zeo_texture]
2020. 6.18. Modified zTextureFromZTK to read a bump map. [zeo_texture]